Trying to fix error

--- a/front-end/style.css
+++ b/front-end/style.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    background-image: url(/images/purple.jpg);
+    background-image: url(/images/gradient.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
